# static-assertions

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml
ci/: travis.sh
proc/: Cargo.toml
proc/src/: lib.rs
proc/src/parse/: generic.rs  mod.rs  op.rs
proc/tests/: size.rs
src/: assert_align.rs  assert_cfg.rs  assert_eq_size.rs  assert_eq_type.rs  assert_ffi_safe.rs  assert_field_offsets.rs  assert_fields.rs  assert_impl.rs  assert_ne_type.rs  assert_not_impl.rs  assert_obj_safe.rs  assert_one_feature.rs  assert_size.rs  assert_super_trait.rs  assert_trait.rs  assert_type.rs  assert_variance.rs  bool.rs  const_assert.rs  does_impl.rs  impls.rs  lib.rs  type_level_bool.rs  util.rs
tests/: const.rs  eq_size.rs  eq_ty.rs  eq_type.rs  field_offsets.rs  fields.rs  ne_type.rs  obj_safe.rs  proc_size.rs  trait_impl.rs  type_eq.rs  type_ne.rs  variance.rs
