[package]
name = "static_assertions"
version = "0.2.4"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/nvzqz/static-assertions-rs"
repository = "https://github.com/nvzqz/static-assertions-rs"
categories = ["no-std", "rust-patterns"]
keywords = ["assert", "static", "testing"]
description = "Compile-time assertions to ensure that invariants are met."

[badges]
travis-ci = { repository = "nvzqz/static-assertions-rs" }

[features]
