[package]
name = "static_assertions"
version = "0.3.1"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nvzqz/static-assertions-rs"
repository = "https://github.com/nvzqz/static-assertions-rs"
documentation = "https://docs.rs/static_assertions/"
categories = ["no-std", "rust-patterns"]
keywords = ["assert", "static", "testing"]
description = "Compile-time assertions to ensure that invariants are met."
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[badges]
travis-ci = { repository = "nvzqz/static-assertions-rs" }

[features]
nightly = []
